--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,12 +78,12 @@
     <string name="stroken">stroken</string>
     <string name="projection">projection</string>
     <string name="duplicate_merging">duplicate merging</string>
-    <string name="text_size">text size</string>
-    <string name="danmaku_margin">danmaku margin</string>
+    <string name="text_size_coeff">text size coeff</string>
+    <string name="line_height">line height</string>
     <string name="danmaku_drawing">danmaku drawing</string>
     <string name="click_to_learn_more">click to learn more</string>
     <string name="danmaku_drawing_more">The shadow radius of p1 in shadow mode\nIn stroke mode p1 incoming stroke width\nIn projection mode, p1, p2, p3 input offsetX, offsetY, alpha offsetX/offsetY: offset in x/y direction alpha: projection transparency [0, 255]\nFill in floating point</string>
-    <string name="danmaku_scroll_speed_factor">danmaku scroll speed factor</string>
+    <string name="danmaku_duration_coeff">danmaku duration coeff</string>
     <string name="maximum_visible_size_in_screen">maximum visible size in screen</string>
     <string name="minus_one_is_auto_zero_is_unlimited">-1 = auto\n0 = unlimited</string>
     <string name="allow_all_ads">allow all ADs</string>
