--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -152,4 +152,7 @@
     <string name="open_with_webview">使用 WebView 打开</string>
     <string name="draw_debug_info">绘制调试信息</string>
     <string name="clean_danmaku_cache">清理弹幕缓存</string>
+    <string name="margin_top">顶边距</string>
+    <string name="margin_bottom">底边距</string>
+    <string name="font">字体</string>
 </resources>
