--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -155,4 +155,5 @@
     <string name="margin_top">顶边距</string>
     <string name="margin_bottom">底边距</string>
     <string name="font">字体</string>
+    <string name="file">文件</string>
 </resources>
