save log 兼容 Android R

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -156,4 +156,5 @@
     <string name="margin_bottom">底边距</string>
     <string name="font">字体</string>
     <string name="file">文件</string>
+    <string name="build_time">构建时间</string>
 </resources>
