--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,5 @@
     <string name="margin_bottom">margin bottom</string>
     <string name="font">font</string>
     <string name="file">file</string>
+    <string name="build_time">build time</string>
 </resources>
